fixed on mobile design

--- a/my-app/src/pages/Page.css
+++ b/my-app/src/pages/Page.css
@@ -42,11 +42,14 @@
 .card {
   width: 100%;
   max-width: 500px;
-  text-align: center;
+  height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 25px;
+  text-align: center;
+  align-items: center;
 }
+
+
 
 /* Elegant divider lines */
 .divider {
@@ -54,14 +57,17 @@
   height: 1px;
   background: #b5aea8;
   opacity: 0.6;
+  margin-bottom: 5px;
 }
 
 /* Tabs (minimal, elegant) */
 .tabs {
-  display: flex;
-  justify-content: center;
-  gap: 25px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 10px;
+  text-align: center;
 }
+
 
 .tabs button {
   background: none;
@@ -74,10 +80,16 @@
   cursor: pointer;
 }
 
+@media (max-width: 600px) {
+  .tabs {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
 /* Content */
 .tab-content {
-  max-height: 50vh;
-  overflow-y: none;
+  height: 55vh;
+  overflow-y: auto;
   padding: 10px;
 }
 
@@ -137,9 +149,9 @@ h2 {
 
 /* Mobile: stack instead */
 @media (max-width: 600px) {
-  .menu-columns {
-    flex-direction: column;
-    text-align: center;
+  .titelIMG{
+    height: 90px;
+    width: auto;
   }
 }
 .menu-columns {
@@ -158,8 +170,6 @@ h2 {
   background: rgba(0,0,0,0.1);
 }
 
-@media (max-width: 600px) {
-  .menu-columns::before {
-    display: none;
-  }
-}
+
+
+
